# peakread

./: CONTRIBUTING.md  LICENSE  README.md  requirements.txt  setup.cfg
src/peakread/: main.py
