[metadata]
name = peakread
version = 0.0.1
author = Madalin Popa
author_email = coderustle@gmail.com
description = A pipeline to generate article summaries from an url
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    Topic :: Utilities
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.11

[options]
package_dir =
  =src
packages = find:
include_package_data = True
install_requires =
  typer[all]
  newspaper3k
  Pillow

[options.packages.find]
where = src
exclude =
  test*

[options.entry_points]
console_scripts =
  peak = peakread.main:app

[tool:pytest]
minversion = 6.0
addopts = -ra -q --cov
testpaths = tests

[coverage:run]
branch = True

[coverage:report]
show_missing = True
skip_covered = False

[coverage:paths]
source =
  src/
